testdata/baselines/reference/submodule/compiler/deeplyDependentLargeArrayMutation.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
foo.js(5,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(6,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(7,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(8,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(9,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(10,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(11,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(12,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(13,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(14,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(15,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(16,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(17,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(18,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(19,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(20,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(21,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(22,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(23,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(24,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(25,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(26,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(27,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(28,13): error TS2339: Property 'length' does not exist on type '{}'.
foo.js(29,13): error TS2339: Property 'length' does not exist on type '{}'.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== foo.js (25 errors) ====
    // repro from #26031
    function build() {
        var arr = [];
    
        arr[arr.length] = 'value'; 
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value'; 
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value'; 
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value'; 
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value'; 
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value';
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
        arr[arr.length] = 'value'; 
                ~~~~~~
!!! error TS2339: Property 'length' does not exist on type '{}'.
    }